Bug 444419 - [wayland] - strange black line divides panel in two halves
Summary: [wayland] - strange black line divides panel in two halves
Status: RESOLVED FIXED
Alias: None
Product: lattedock
Classification: Unmaintained
Component: plasmoid (other bugs)
Version First Reported In: 0.10.3
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Michail Vourlakos
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2021-10-26 10:06 UTC by PK
Modified: 2021-11-11 13:50 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 0.10.4
Sentry Crash Report:


Attachments
line in the panel (81.40 KB, image/jpeg)
2021-10-26 10:08 UTC, PK
Details
bottom dock (233.96 KB, image/jpeg)
2021-10-26 18:22 UTC, PK
Details
the latte layout (7.65 KB, text/plain)
2021-10-26 18:25 UTC, PK
Details
screenshot with plasma 5.22.5 (262.53 KB, image/jpeg)
2021-11-03 18:36 UTC, PK
Details
screenshot with plasma 5.23 taken 20 minutes later (261.60 KB, image/jpeg)
2021-11-03 18:40 UTC, PK
Details

Note You need to log in before you can comment on or make changes to this bug.
Description PK 2021-10-26 10:06:26 UTC
SUMMARY
When I have an unblurred latte-layout and use it under Wayland, this thin black line divides the panel exactly in two halves.
Blurred: no line
X: no line

STEPS TO REPRODUCE
1. use unblurred latte-layout
2. use Wayland
3. 

OBSERVED RESULT
A thin line divides the panel exactly in two halves

EXPECTED RESULT
No line to be seen

Besturingssysteem: Kubuntu 21.10
KDE Plasma-versie: 5.23.1
Versie van KDE-Frameworks: 5.87.0
Qt-versie: 5.15.2
Kernel-versie: 5.13.0-20-generic (64-bits)
Grafisch platform: X11
Processors: 4 × Intel® Celeron® J4105 CPU @ 1.50GHz
Geheugen: 7,4 GiB RAM
Grafische processor: Mesa Intel® UHD Graphics 600
Comment 1 PK 2021-10-26 10:08:29 UTC
Created attachment 142900 [details]
line in the panel

Here you see the line in the panel. It's only a small piece of my desktop to make it clearer. Also I made the image a little bigger
Comment 2 Michail Vourlakos 2021-10-26 10:36:17 UTC
no idea ...
Comment 3 PK 2021-10-26 12:44:17 UTC
I did a little more research in case someone else also has this strange thing. 
- the silly little black line is always black. Also when using a light plasma theme,
- it is always exactly in the middle of the screen, how big long or short the panel is and no matter if the panel is left, right, top or bottom.
- as said: it is only using Wayland with no blur.
What i just found was that 
- you HAVE to have toggled "always visible". If the panel autohides or evades other windows, the phenomena also doesn't occur.
I understand very well that this isn't groundshaking. 
Thank you..
Comment 4 Michail Vourlakos 2021-10-26 12:48:47 UTC
1. if you disable KWin Blur Effect totally from plasma systemsettings same issue?
2. if you disable KWin Contrast Effet totally from plasma systemsettings same issue?
3. If you close Latte, use a plasma panel instead and use steps [1 and 2] does the issue appears?
Comment 5 PK 2021-10-26 18:08:12 UTC
1. if you disable KWin Blur Effect totally from plasma systemsettings same issue?
   that makes no difference. 
2. if you disable KWin Contrast Effet totally from plasma systemsettings same issue?
   that also makes no difference at all
3. If you close Latte, use a plasma panel instead and use steps [1 and 2] does the issue appears?
   turns out that only in Latte there is this line... I tried in different ways.
Comment 6 Michail Vourlakos 2021-10-26 18:17:34 UTC
4. how does it look with a bottom dock?
Comment 7 Michail Vourlakos 2021-10-26 18:18:00 UTC
5. send also your latte layout file to check it out
Comment 8 PK 2021-10-26 18:22:54 UTC
Created attachment 142915 [details]
bottom dock

this is how it looks on the bottom dock
Comment 9 PK 2021-10-26 18:25:03 UTC
Created attachment 142916 [details]
the latte layout

here is the latte layout
Comment 10 PK 2021-10-26 18:27:33 UTC
But now I think about it: all my latte layouts give this line given the "right" conditions
Comment 11 PK 2021-10-27 05:34:20 UTC
One more experiment.
I built latte 0.10.3 on an other computer. Also Intel cpu and graphics card but different, and a somewhat older Kubuntu version.

The thin line DOESN'T appear.
Comment 12 PK 2021-10-27 06:59:31 UTC
I did one more experiment: I installed Neon User Edition. This gives the latest released builds of a lot (gear, frameworks etc).
Guess what?
Using Wayland the thin line SHOWS UP
Comment 13 Martial 2021-10-29 07:28:51 UTC
Hello

I confirm this bug on Arch.
I will take a look tonight on my desktop which has an ATI GPU.

Operating System: Arch Linux
KDE Plasma Version: 5.23.2
KDE Frameworks Version: 5.87.0
Qt Version: 5.15.2
Kernel Version: 5.14.14-arch1-1 (64-bit)
Graphics Platform: Wayland
Processors: 8 × Intel® Core™ i5-8350U CPU @ 1.70GHz
Memory: 15.5 Gio of RAM
Graphics Processor: Mesa Intel® UHD Graphics 620
Comment 14 Martial 2021-11-02 19:24:38 UTC
Same bugs with my desktop:

Operating System: Arch Linux
KDE Plasma Version: 5.23.2
KDE Frameworks Version: 5.87.0
Qt Version: 5.15.2
Kernel Version: 5.14.15-arch1-1 (64-bit)
Graphics Platform: Wayland
Processors: 12 × AMD Ryzen 5 2600X Six-Core Processor
Memory: 31.3 Gio of RAM
Graphics Processor: AMD Radeon RX 5600 XT
Comment 15 PK 2021-11-03 18:36:14 UTC
Created attachment 143178 [details]
screenshot with plasma 5.22.5
Comment 16 PK 2021-11-03 18:40:53 UTC
Created attachment 143179 [details]
screenshot with plasma 5.23 taken 20 minutes later

I had Kubuntu 21.04 on my laptop. I just performed a "release upgrade" to the version 21.10. Then I made a screenshot. 
After taking the screenshot I added the "backports ppa" to Kubuntu 21.10 and upgraded to plasma 5.23.
Bingo! There is the line...
It must be some sort of a clash between latte-dock and plasma 5.23
Comment 17 Michail Vourlakos 2021-11-06 06:39:15 UTC
(In reply to PK from comment #16)
> It must be some sort of a clash between latte-dock and plasma 5.23

no it isnt, It works just fine on my system under wayland with:

I use (i915 - intel driver) under wayland, Plasma 5.23.2 and Latte 0.10.3

what is your plasma theme? is it reproducable with Breeze plasma theme?
Comment 18 PK 2021-11-06 06:43:57 UTC
Using the Breeze plasma theme makes no difference. The line remains.
I use the Lightly desktop theme. Switching to the Breeze desktop thema also makes no difference.
Only thing I am sure of is that it started on both my computers (Neon, Kubuntu) after plasma 5.23 came...
Comment 19 PK 2021-11-06 06:46:18 UTC
But even if you use a little blur the line becomes quickly less visable...
Comment 20 Michail Vourlakos 2021-11-06 06:55:10 UTC
without a proper way to reproduce in my system, there is no way to be fixed. I am using Plasma 5.23.2 no issue at all.
Comment 21 PK 2021-11-06 07:00:06 UTC
I fully understand!
Comment 22 Michail Vourlakos 2021-11-08 16:20:16 UTC
https://www.reddit.com/r/kde/comments/qpa8cz/latte_dock_a_black_vertical_line_in_center/

users report that this is reproducable only with visibility mode: AlwaysVisible
Comment 23 PK 2021-11-08 16:45:56 UTC
I think you're right. When I toggle autohide there seems to be no line...
Comment 24 Martial 2021-11-08 17:58:02 UTC
I confirm. Their is no line in auto-hide mode.
Comment 25 Michail Vourlakos 2021-11-11 12:00:25 UTC
Git commit abc125fe652585474a6dc7aa5f518e32e119adfd by Michail Vourlakos.
Committed on 11/11/2021 at 11:57.
Pushed by mvourlakos into branch 'v0.10'.

wayland:hide centered black line for alwaysvisible

--drop RasterWindow for always visible ghost windows and
use a fully transparent QQuickView
FIXED-IN:0.10.4

M  +5    -2    app/wm/waylandinterface.cpp

https://invent.kde.org/plasma/latte-dock/commit/abc125fe652585474a6dc7aa5f518e32e119adfd
Comment 26 Michail Vourlakos 2021-11-11 12:00:58 UTC
Git commit 199effaf2b90aa1724f7114f5c097f3d3b920437 by Michail Vourlakos.
Committed on 11/11/2021 at 12:00.
Pushed by mvourlakos into branch 'master'.

wayland:hide centered black line for alwaysvisible

--drop RasterWindow for always visible ghost windows and
use a fully transparent QQuickView
FIXED-IN:0.10.4

M  +5    -2    app/wm/waylandinterface.cpp

https://invent.kde.org/plasma/latte-dock/commit/199effaf2b90aa1724f7114f5c097f3d3b920437
Comment 27 PK 2021-11-11 13:50:53 UTC
Tested the fix on my system. Works 100% here.