wayland:hide centered black line for alwaysvisible

--drop RasterWindow for always visible ghost windows and
use a fully transparent QQuickView

BUG:444419
FIXED-IN:0.10.4